; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/i2c/extr_tda998x_drv.c_tda998x_irq_thread.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/i2c/extr_tda998x_drv.c_tda998x_irq_thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tda998x_priv = type { i32, i64, i32, i32 }

@REG_CEC_INTSTATUS = common dso_local global i32 0, align 4
@CEC_INTSTATUS_HDMI = common dso_local global i32 0, align 4
@REG_CEC_RXSHPDINT = common dso_local global i32 0, align 4
@REG_CEC_RXSHPDLEV = common dso_local global i32 0, align 4
@REG_INT_FLAGS_0 = common dso_local global i32 0, align 4
@REG_INT_FLAGS_1 = common dso_local global i32 0, align 4
@REG_INT_FLAGS_2 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [60 x i8] c"tda irq sta %02x cec %02x lvl %02x f0 %02x f1 %02x f2 %02x\0A\00", align 1
@CEC_RXSHPDINT_HPD = common dso_local global i32 0, align 4
@CEC_RXSHPDLEV_HPD = common dso_local global i32 0, align 4
@CEC_PHYS_ADDR_INVALID = common dso_local global i32 0, align 4
@INT_FLAGS_2_EDID_BLK_RD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @tda998x_irq_thread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tda998x_irq_thread(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.tda998x_priv*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = bitcast i8* %13 to %struct.tda998x_priv*
  store %struct.tda998x_priv* %14, %struct.tda998x_priv** %5, align 8
  store i32 0, i32* %12, align 4
  %15 = load %struct.tda998x_priv*, %struct.tda998x_priv** %5, align 8
  %16 = load i32, i32* @REG_CEC_INTSTATUS, align 4
  %17 = call i32 @cec_read(%struct.tda998x_priv* %15, i32 %16)
  store i32 %17, i32* %6, align 4
  %18 = load i32, i32* %6, align 4
  %19 = load i32, i32* @CEC_INTSTATUS_HDMI, align 4
  %20 = and i32 %18, %19
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %84

22:                                               ; preds = %2
  %23 = load %struct.tda998x_priv*, %struct.tda998x_priv** %5, align 8
  %24 = load i32, i32* @REG_CEC_RXSHPDINT, align 4
  %25 = call i32 @cec_read(%struct.tda998x_priv* %23, i32 %24)
  store i32 %25, i32* %7, align 4
  %26 = load %struct.tda998x_priv*, %struct.tda998x_priv** %5, align 8
  %27 = load i32, i32* @REG_CEC_RXSHPDLEV, align 4
  %28 = call i32 @cec_read(%struct.tda998x_priv* %26, i32 %27)
  store i32 %28, i32* %8, align 4
  %29 = load %struct.tda998x_priv*, %struct.tda998x_priv** %5, align 8
  %30 = load i32, i32* @REG_INT_FLAGS_0, align 4
  %31 = call i32 @reg_read(%struct.tda998x_priv* %29, i32 %30)
  store i32 %31, i32* %9, align 4
  %32 = load %struct.tda998x_priv*, %struct.tda998x_priv** %5, align 8
  %33 = load i32, i32* @REG_INT_FLAGS_1, align 4
  %34 = call i32 @reg_read(%struct.tda998x_priv* %32, i32 %33)
  store i32 %34, i32* %10, align 4
  %35 = load %struct.tda998x_priv*, %struct.tda998x_priv** %5, align 8
  %36 = load i32, i32* @REG_INT_FLAGS_2, align 4
  %37 = call i32 @reg_read(%struct.tda998x_priv* %35, i32 %36)
  store i32 %37, i32* %11, align 4
  %38 = load i32, i32* %6, align 4
  %39 = load i32, i32* %7, align 4
  %40 = load i32, i32* %8, align 4
  %41 = load i32, i32* %9, align 4
  %42 = load i32, i32* %10, align 4
  %43 = load i32, i32* %11, align 4
  %44 = call i32 @DRM_DEBUG_DRIVER(i8* getelementptr inbounds ([60 x i8], [60 x i8]* @.str, i64 0, i64 0), i32 %38, i32 %39, i32 %40, i32 %41, i32 %42, i32 %43)
  %45 = load i32, i32* %7, align 4
  %46 = load i32, i32* @CEC_RXSHPDINT_HPD, align 4
  %47 = and i32 %45, %46
  %48 = icmp ne i32 %47, 0
  br i1 %48, label %49, label %67

49:                                               ; preds = %22
  %50 = load i32, i32* %8, align 4
  %51 = load i32, i32* @CEC_RXSHPDLEV_HPD, align 4
  %52 = and i32 %50, %51
  %53 = icmp ne i32 %52, 0
  br i1 %53, label %54, label %57

54:                                               ; preds = %49
  %55 = load %struct.tda998x_priv*, %struct.tda998x_priv** %5, align 8
  %56 = call i32 @tda998x_edid_delay_start(%struct.tda998x_priv* %55)
  br label %66

57:                                               ; preds = %49
  %58 = load %struct.tda998x_priv*, %struct.tda998x_priv** %5, align 8
  %59 = getelementptr inbounds %struct.tda998x_priv, %struct.tda998x_priv* %58, i32 0, i32 3
  %60 = call i32 @schedule_work(i32* %59)
  %61 = load %struct.tda998x_priv*, %struct.tda998x_priv** %5, align 8
  %62 = getelementptr inbounds %struct.tda998x_priv, %struct.tda998x_priv* %61, i32 0, i32 2
  %63 = load i32, i32* %62, align 8
  %64 = load i32, i32* @CEC_PHYS_ADDR_INVALID, align 4
  %65 = call i32 @cec_notifier_set_phys_addr(i32 %63, i32 %64)
  br label %66

66:                                               ; preds = %57, %54
  store i32 1, i32* %12, align 4
  br label %67

67:                                               ; preds = %66, %22
  %68 = load i32, i32* %11, align 4
  %69 = load i32, i32* @INT_FLAGS_2_EDID_BLK_RD, align 4
  %70 = and i32 %68, %69
  %71 = icmp ne i32 %70, 0
  br i1 %71, label %72, label %83

72:                                               ; preds = %67
  %73 = load %struct.tda998x_priv*, %struct.tda998x_priv** %5, align 8
  %74 = getelementptr inbounds %struct.tda998x_priv, %struct.tda998x_priv* %73, i32 0, i32 1
  %75 = load i64, i64* %74, align 8
  %76 = icmp ne i64 %75, 0
  br i1 %76, label %77, label %83

77:                                               ; preds = %72
  %78 = load %struct.tda998x_priv*, %struct.tda998x_priv** %5, align 8
  %79 = getelementptr inbounds %struct.tda998x_priv, %struct.tda998x_priv* %78, i32 0, i32 1
  store i64 0, i64* %79, align 8
  %80 = load %struct.tda998x_priv*, %struct.tda998x_priv** %5, align 8
  %81 = getelementptr inbounds %struct.tda998x_priv, %struct.tda998x_priv* %80, i32 0, i32 0
  %82 = call i32 @wake_up(i32* %81)
  store i32 1, i32* %12, align 4
  br label %83

83:                                               ; preds = %77, %72, %67
  br label %84

84:                                               ; preds = %83, %2
  %85 = load i32, i32* %12, align 4
  %86 = call i32 @IRQ_RETVAL(i32 %85)
  ret i32 %86
}

declare dso_local i32 @cec_read(%struct.tda998x_priv*, i32) #1

declare dso_local i32 @reg_read(%struct.tda998x_priv*, i32) #1

declare dso_local i32 @DRM_DEBUG_DRIVER(i8*, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @tda998x_edid_delay_start(%struct.tda998x_priv*) #1

declare dso_local i32 @schedule_work(i32*) #1

declare dso_local i32 @cec_notifier_set_phys_addr(i32, i32) #1

declare dso_local i32 @wake_up(i32*) #1

declare dso_local i32 @IRQ_RETVAL(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
